[package]
name = "near-jsonrpc-client"
version = "0.8.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-jsonrpc-client-rs"
description = "Lower-level API for interfacing with the NEAR Protocol via JSONRPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "api", "jsonrpc", "rpc", "async"]
rust-version = "1.67.1"

[dependencies]
log = "0.4.17"
borsh = "1.3.0"
serde = "1.0.145"
reqwest = { version = "0.11.12", features = ["json"], default-features = false }
thiserror = "1.0.37"
serde_json = "1.0.85"
lazy_static = "1.4.0"

near-crypto = { git = 'https://github.com/kobayurii/nearcore.git', rev = '67aa2c70ac0b960b59b69b3e7c0bc0f4eafc1228' }
near-primitives = { git = 'https://github.com/kobayurii/nearcore.git', rev = '67aa2c70ac0b960b59b69b3e7c0bc0f4eafc1228' }
near-chain-configs = { git = 'https://github.com/kobayurii/nearcore.git', rev = '67aa2c70ac0b960b59b69b3e7c0bc0f4eafc1228' }
near-jsonrpc-primitives = { git = 'https://github.com/kobayurii/nearcore.git', rev = '67aa2c70ac0b960b59b69b3e7c0bc0f4eafc1228' }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"

[features]
default = ["native-tls"]
any = []
sandbox = []
adversarial = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "auth"

[package.metadata.docs.rs]
features = ["any", "sandbox"]
